force-app/main/default/objects/CampaignMember/fields/Academic_Session_Name__c.field-meta.xml
<CustomField>
    <fullName>Academic_Session_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <description>Formula Field: Populates with the name for the related Academic Session. Used for the Campus Visit project</description>
    <formula>Academic_Session__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Supports the campus tour check-in by tracking the academic session the student plans to attend based on student’s program of interest.</inlineHelpText>
    <label>Academic Session Name</label>
    <type>Text</type>
</CustomField>