force-app/main/default/objects/CampaignMember/fields/Additional_Tour_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Tour_Information__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <description>This field directs students during the event to indicate their interest in attending an additional Tour by using check box.</description>
    <inlineHelpText>This field outlines the procedure during the check-in process for a campaign on the same day, if a student plans to attend a Additonal Tour (For example, Aviation Tour, Barrett) later that day, they should either click the checkbox (if interested) or leave it unchecked (if not interested).</inlineHelpText>
    <label>Additional Tour Information</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>