force-app/main/default/objects/CampaignMember/fields/Aventri_Attendee_ID__c.field-meta.xml
<CustomField>
    <fullName>Aventri_Attendee_ID__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>The source is Aventri Event Registration ID (18 digits) OR Zoom participant ID (22 digits).</description>
    <externalId>true</externalId>
    <inlineHelpText>The source is Aventri Event Registration ID (18 digits) OR Zoom participant ID (22 digits).</inlineHelpText>
    <label>External Attendee ID</label>
    <length>22</length>
    <type>Text</type>
</CustomField>