force-app/main/default/objects/CampaignMember/fields/Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_Date__c</fullName>
    <description>Date scholarship was awarded.</description>
    <inlineHelpText>Date scholarship was awarded.</inlineHelpText>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>