force-app/main/default/objects/CampaignMember/fields/Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <description>This field is used to print badges displaying attendee’s preferred name for the event.</description>
    <inlineHelpText>“Badge Name” is specifically utilized to generate prinitng printing badges that showcase the name preferred by the attendee in check-in process for the event.</inlineHelpText>
    <label>Badge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>