force-app/main/default/objects/CampaignMember/fields/Barrett_Session__c.field-meta.xml
<CustomField>
    <fullName>Barrett_Session__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>This field directs students during the event to indicate their interest in attending a Barrett Tour by using check box.</description>
    <inlineHelpText>This field outlines the procedure during the check-in process for a campaign on the same day, if a student plans to attend a Barrett session later that day, they should either click the checkbox (if interested) or leave it unchecked (if not interested).</inlineHelpText>
    <label>Barrett Session</label>
    <type>Checkbox</type>
</CustomField>