force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Explicit_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Explicit_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the Source is not implicit for this Campaign Member (e.g. load of purchased names), a Source should be identified here.</inlineHelpText>
    <label>Campaign Member Explicit Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Members (Source)</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>