force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Source__c</fullName>
    <formula>IF(ISBLANK(Campaign_Member_Explicit_Source__c),
IF(OR(ISPICKVAL(Campaign.Source_Type__c,"Internal"),ISPICKVAL(Campaign.Source_Type__c,"External")),
CampaignId,"NO SOURCE"),Campaign_Member_Explicit_Source__c)</formula>
    <inlineHelpText>The ID of the Campaign Member Explicit Source or of the Campaign associated to this Campaign Member if that Campaign has a Source Type of Internal or External.</inlineHelpText>
    <label>Campaign Member Source</label>
    <type>Text</type>
</CustomField>