force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Upsert_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Upsert_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Set to the &lt;&lt;CampaignID&gt;&gt;.&lt;&lt;ContactID OR LeadID&gt;&gt;</inlineHelpText>
    <label>Campaign Member Upsert ID</label>
    <length>31</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>