force-app/main/default/objects/CampaignMember/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <description>This field keeps important details related to the campaign member for the campaign, for example it is utilized to take special requests like student wanting to be in same group with another student.</description>
    <inlineHelpText>Tracks pertinent notes relevant to the contact in this campaign.  For example, in the campus tour check-in process this field may be used to track a request to be in the same tour group as another student.</inlineHelpText>
    <label>Comments</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>