force-app/main/default/objects/CampaignMember/fields/De_dupe__c.field-meta.xml
<CustomField>
    <fullName>De_dupe__c</fullName>
    <description>Used for Subscription Center Campaign Member record types - Marketing Cloud de-dup = contactId+campaignId</description>
    <formula>ContactId&amp;"+"&amp;CampaignId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for Subscription Center Campaign Member record types - Marketing Cloud de-dup = contactId+campaignId</inlineHelpText>
    <label>MC De-dupe</label>
    <type>Text</type>
</CustomField>