force-app/main/default/objects/CampaignMember/fields/Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions__c</fullName>
    <description>Notes attendee's special diet needs</description>
    <inlineHelpText>Food allergy or religious restriction, e.g. peanut, dairy, egg, wheat, pork, gelatin</inlineHelpText>
    <label>Dietary Restrictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>