force-app/main/default/objects/CampaignMember/fields/edX_Active_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>edX_Active_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>edX Active Enrollment</description>
    <inlineHelpText>edX Active Enrollment</inlineHelpText>
    <label>edX Campaign Member Active Enrollment</label>
    <type>Checkbox</type>
</CustomField>