force-app/main/default/objects/CampaignMember/fields/edX_Course_Grade__c.field-meta.xml
<CustomField>
    <fullName>edX_Course_Grade__c</fullName>
    <description>edX Course Grade</description>
    <inlineHelpText>edX Course Grade</inlineHelpText>
    <label>edX Campaign Member Course Grade</label>
    <length>5</length>
    <type>Text</type>
</CustomField>