force-app/main/default/objects/CampaignMember/fields/edX_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>edX_Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checked box indicates that an edX student who has opted in for receiving marketing communications about ASU. Please do not contact any students who have opted out of communications (unchecked box).</inlineHelpText>
    <label>edX Campaign Member Email Opt In</label>
    <type>Checkbox</type>
</CustomField>