force-app/main/default/objects/CampaignMember/fields/edX_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>edX_Enrollment_Date__c</fullName>
    <description>edX Enrollment Date</description>
    <inlineHelpText>edX Enrollment Date</inlineHelpText>
    <label>edX Campaign Member Enrollment Date</label>
    <type>Date</type>
</CustomField>