force-app/main/default/objects/CampaignMember/fields/edX_Username__c.field-meta.xml
<CustomField>
    <fullName>edX_Username__c</fullName>
    <description>Unique login user creates for the edX system.</description>
    <inlineHelpText>This is an edX related username and is only referenced in their database.</inlineHelpText>
    <label>edX Campaign Member Username</label>
    <length>60</length>
    <type>Text</type>
</CustomField>