force-app/main/default/objects/CampaignMember/fields/Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Date__c</fullName>
    <description>Date the person was eligible for the award.</description>
    <inlineHelpText>Date the person was eligible for the award.</inlineHelpText>
    <label>Eligible Date</label>
    <type>Date</type>
</CustomField>