force-app/main/default/objects/CampaignMember/fields/Housing_Tour__c.field-meta.xml
<CustomField>
    <fullName>Housing_Tour__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>This field directs students during the event to indicate their interest in attending an additional Tour by using check box.</description>
    <inlineHelpText>This field outlines the procedure during the check-in process for a campaign on the same day, if a student plans to attend a Additonal Tour (For example, Aviation Tour, Barrett) later that day, they should either click the checkbox (if interested) or leave it unchecked (if not interested).</inlineHelpText>
    <label>Housing Tour</label>
    <type>Checkbox</type>
</CustomField>