force-app/main/default/objects/CampaignMember/fields/Inbound_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Interaction__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true if and when this Campaign Member is considered an Inbound Interaction. Dependent on the Campaign Type (e.g. set when an Event Campaign Member Status is "Registered", or when a Source Campaign Member Status is "Submitted")</inlineHelpText>
    <label>Inbound Interaction</label>
    <type>Checkbox</type>
</CustomField>