force-app/main/default/objects/CampaignMember/fields/Inbound_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Interaction_Date__c</fullName>
    <inlineHelpText>The date and time this Campaign Member was first considered an Inbound Interaction. Set via Workflow.</inlineHelpText>
    <label>Inbound Interaction Date</label>
    <type>DateTime</type>
</CustomField>