force-app/main/default/objects/CampaignMember/fields/Inbound_Interaction_Stage__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Interaction_Stage__c</fullName>
    <inlineHelpText>The Stage of the associated Opportunity, at the time this Campaign member was first considered an Inbound Interaction. Set via Workflow.</inlineHelpText>
    <label>Inbound Interaction Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>