force-app/main/default/objects/CampaignMember/fields/Inbound_Interaction_Term__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Interaction_Term__c</fullName>
    <inlineHelpText>The Term of the associated Opportunity, at the time this Campaign member was first considered an Inbound Interaction. Set via Workflow.</inlineHelpText>
    <label>Inbound Interaction Term</label>
    <length>15</length>
    <type>Text</type>
</CustomField>