force-app/main/default/objects/CampaignMember/fields/Is_Primary_Interest__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If box is checked, then it is considered the primary interest. Populated through code.</description>
    <label>Is Primary Interest</label>
    <type>Checkbox</type>
</CustomField>