force-app/main/default/objects/CampaignMember/fields/IsSubscribed__c.field-meta.xml
<CustomField>
    <fullName>IsSubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Subscription Center Campaign Member record types - Indicates if the campaign Member subscribed to corresponding BU/list campaign.</description>
    <inlineHelpText>Used for Subscription Center Campaign Member record types - Indicates if the campaign Member subscribed to corresponding BU/list campaign.</inlineHelpText>
    <label>MC IsSubscribed</label>
    <type>Checkbox</type>
</CustomField>