force-app/main/default/objects/CampaignMember/fields/Last_Member_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Member_Status_Change__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>The Date and Time this Campaign Member had a Status change. Updated via Workflow.</inlineHelpText>
    <label>Last Member Status Change</label>
    <type>DateTime</type>
</CustomField>