force-app/main/default/objects/CampaignMember/fields/Last_Subscribed__c.field-meta.xml
<CustomField>
    <fullName>Last_Subscribed__c</fullName>
    <description>Used for Subscription Center Campaign Member record types - Marketing Cloud Last Subscribed date/time</description>
    <inlineHelpText>Used for Subscription Center Campaign Member record types - Marketing Cloud Last Subscribed date/time</inlineHelpText>
    <label>MC Last Subscribed</label>
    <type>DateTime</type>
</CustomField>