force-app/main/default/objects/CampaignMember/fields/Last_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>Last_Unsubscribe__c</fullName>
    <description>Used for Subscription Center Campaign Member record types - Marketing Cloud Last Unsubscribe date/time</description>
    <inlineHelpText>Used for Subscription Center Campaign Member record types - Marketing Cloud Last Unsubscribe date/time</inlineHelpText>
    <label>MC Last Unsubscribe</label>
    <type>DateTime</type>
</CustomField>