force-app/main/default/objects/CampaignMember/fields/LeadOrContactID__c.field-meta.xml
<CustomField>
    <fullName>LeadOrContactID__c</fullName>
    <formula>IF(ISBLANK(ContactId),CASESAFEID(LeadId),CASESAFEID(ContactId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadOrContactID</label>
    <type>Text</type>
</CustomField>