force-app/main/default/objects/CampaignMember/fields/Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_Date__c</fullName>
    <description>Date the awarded letter was sent.</description>
    <inlineHelpText>Date the awarded letter was sent.</inlineHelpText>
    <label>Letter Date</label>
    <type>Date</type>
</CustomField>