force-app/main/default/objects/CampaignMember/fields/Max_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Modified_Date__c</fullName>
    <description>If there is no Contact, we know this is a lead, so evaluate for the most recently updated amongst Campaign Member, Campaign, and Lead when Campaign Record Type equals Interest

If there is no Lead, we can only evaluate for the most recently updated between Campaign Member, Campaign, and Opportunity when Campaign Record Type equals Interest

Else, evaluate for the most recently updated between Campaign Member and Campaign</description>
    <formula>IF(ISBLANK(ContactId)&amp;&amp; Campaign.RecordType.DeveloperName = "Interest",

NOW() - MIN( NOW() - LastModifiedDate , NOW() - Campaign.LastModifiedDate, NOW() - Lead.LastModifiedDate),
IF(ISBLANK(LeadId)&amp;&amp; Campaign.RecordType.DeveloperName = "Interest",

NOW() - MIN( NOW() - LastModifiedDate , NOW() - Campaign.LastModifiedDate, NOW() - Opportunity__r.LastModifiedDate),

NOW() - MIN( NOW() - LastModifiedDate , NOW() - Campaign.LastModifiedDate)))</formula>
    <inlineHelpText>Displays last modified date of either the Campaign Member or Campaign</inlineHelpText>
    <label>Max Modified Date</label>
    <type>DateTime</type>
</CustomField>