force-app/main/default/objects/CampaignMember/fields/MC_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>MC_Business_Unit__c</fullName>
    <description>Used for Subscription Center Campaign Member record types - The MC Business Unit the campaign is associated with.</description>
    <formula>Campaign.Marketing_Cloud_Business_Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for Subscription Center Campaign Member record types - The MC Business Unit the campaign is associated with.</inlineHelpText>
    <label>MC Business Unit</label>
    <type>Text</type>
</CustomField>