force-app/main/default/objects/CampaignMember/fields/Menu_Preference__c.field-meta.xml
<CustomField>
    <fullName>Menu_Preference__c</fullName>
    <inlineHelpText>e.g. vegetarian, vegan, or non-vegetarian</inlineHelpText>
    <label>Menu Preference</label>
    <type>TextArea</type>
</CustomField>