force-app/main/default/objects/CampaignMember/fields/Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees__c</fullName>
    <description>The Number of Guests plus 1.</description>
    <formula>Number_of_Guests__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Number of Guests plus 1.</inlineHelpText>
    <label>Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>