force-app/main/default/objects/CampaignMember/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <description>Number of guests attendee will be bringing besides themselves</description>
    <label>Number of Guests</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>