force-app/main/default/objects/CampaignMember/fields/Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created__c</fullName>
    <formula>CampaignId = Opportunity__r.Prospect_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to true if membership in this Campaign assocaited with this Campaign Member is listed on the Opportunity as the "Prospect Campaign"</inlineHelpText>
    <label>Opportunity Created</label>
    <type>Checkbox</type>
</CustomField>