force-app/main/default/objects/CampaignMember/fields/Opportunity_Term__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Term__c</fullName>
    <formula>Opportunity__r.Term__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Term</label>
    <type>Text</type>
</CustomField>