force-app/main/default/objects/CampaignMember/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Reason for Cancellation</description>
    <inlineHelpText>Please select a reason for cancellation.</inlineHelpText>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong event/session</fullName>
            </value>
            <value>
                <fullName>Wrong ASU campus</fullName>
            </value>
            <value>
                <fullName>We are not able to visit at this time, but will reschedule soon</fullName>
            </value>
            <value>
                <fullName>No longer interested in ASU</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>