force-app/main/default/objects/CampaignMember/fields/Send_RSVP_confirmation_email__c.field-meta.xml
<CustomField>
    <fullName>Send_RSVP_confirmation_email__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Send RSVP confirmation to an additional e-mail address</description>
    <inlineHelpText>Additional email addresses to include in event notifications (provided by attendee, during registration).</inlineHelpText>
    <label>Send RSVP Confirmation Email</label>
    <type>TextArea</type>
</CustomField>