force-app/main/default/objects/CampaignMember/fields/Sessions__c.field-meta.xml
<CustomField>
    <fullName>Sessions__c</fullName>
    <description>This information is populated by the Visits Import</description>
    <inlineHelpText>Details from the Visit website. Can also be used for manual data entry.</inlineHelpText>
    <label>Sessions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>