force-app/main/default/objects/CampaignMember/fields/Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs__c</fullName>
    <description>Notes if the attendee has special needs</description>
    <inlineHelpText>List accommodations needed, e.g. wheelchair access, interpreter</inlineHelpText>
    <label>Special Needs</label>
    <type>TextArea</type>
</CustomField>