force-app/main/default/objects/CampaignMember/fields/Status_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Reporting__c</fullName>
    <description>Display Campaign Member Status for Cross Filter reporting</description>
    <formula>TEXT(Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status for Reporting</label>
    <type>Text</type>
</CustomField>