force-app/main/default/objects/CampaignMember/fields/Tour_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Tour_Group_Id__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <description>Contains the group number associated for a student's tour group.</description>
    <inlineHelpText>This field indicates the group number associated with student's tour group for the purposes of the Campus Visit.</inlineHelpText>
    <label>Tour Group Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>