force-app/main/default/objects/CampaignMember/recordTypes/All_Students.recordType-meta.xml
<RecordType>
    <fullName>All_Students</fullName>
    <active>true</active>
    <description>Record type for all Leads and Contacts. (Recruitment)</description>
    <label>All Students</label>
</RecordType>