force-app/main/default/objects/CampaignMember/recordTypes/Corporate_Relations_Member.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Relations_Member</fullName>
    <active>true</active>
    <description>Record type used for managing corporate relationships</description>
    <label>Corporate Relations Member</label>
</RecordType>