force-app/main/default/objects/CampaignMember/recordTypes/Subscription_Center_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>Subscription_Center_Campaign_Member</fullName>
    <active>true</active>
    <label>Subscription Center Campaign Member</label>
    
</RecordType>